Improved the visuals of the leaderboard. Added name prompt for players. Adjusted the scores and added hon-related leagues based on player's scores.

--- a/app/index.html
+++ b/app/index.html
@@ -24,19 +24,19 @@
       <div class="container header">
         <div class="row">
           <!-- <div class="container col-md-1"></div> -->
-          <div class="container col-md-4 pt-3 logo">
+          <div class="container col-md-4 m-1 pt-3 logo">
             <img src="./img/logo.png" alt="Heroes of Newerth" id="logo" />
             <h3 class="display-5" id="obituary">RIP HoN <br />May 2010 - June 2022</h3>
           </div>
           <!-- <div class="container col-md-1"></div> -->
-          <div class="container col-md-4 pt-3 title">
+          <div class="container col-md-4 m-1 pt-3 title">
             <h1 class="display-1 mt-4" id ="title">Take Cover</h1>
             <h2 class="display-5 mt-4" id="instructions">
               Press 'E' to dodge the bullets.<br> Refresh the page to try again.
             </h2>
           </div>
-          <div class="container col-md-3" id="leaderboard">
-            <h4>Leaderboard:</h4> 
+          <div class="container col-md-3 pt-3 mt-4" id="leaderboard">
+            <h2 id="lboard">Leaderboard</h2> 
             <table>
               <tr> 
                 <th>Name:</th>
