Created new classes and defined some of the basic attributes and methods for them

--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
     <script src="./js/enemy.js"></script>
     <script src="./js/bullet.js"></script>
     <script src="./js/player.js"></script>
+    <script src="./js/game_session.js"></script>
     <script src="./js/script.js"></script>
     
   </body>
