added some animation methods

--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,9 @@
     
       <div class="row justify-content-center">
         <div class="col-5 startGame" id="startButtonHere">
-      </div>
+          <button class="btn btn-info" id="startGame">Start Game</button>
+          <button class="btn btn-info" id="pauseGame">Pause Game</button>
+        </div>
       </div>
       <div class="row">
       <div class="col tribute">
