--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,8 @@
         </div>
       </div>
       <div class="row game" id="canvas_div">
-        <canvas id="canvas1"></canvas>
+        <canvas class="canvasElem" id="backgroundCanvas"></canvas>
+        <canvas class="canvasElem" id="actionCanvas"></canvas>
       </div>
     
       <div class="row justify-content-center">
@@ -99,6 +100,7 @@
       </div>
     </div>
     </div>
+    <script src="./js/game_object.js"></script>
     <script src="./js/enemy.js"></script>
     <script src="./js/bullet.js"></script>
     <script src="./js/player.js"></script>
