Added a Screens abstract class (singleton) as well as its children classes

--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
       </div>
     </div>
     </div>
+    <script src="./js/screens.js"></script>
     <script src="./js/game_object.js"></script>
     <script src="./js/enemy.js"></script>
     <script src="./js/bullet.js"></script>
